# feedback_report_generator

./: .gitignore  COMMANDS.md  Dockerfile  README.md  buffer  docker-compose.yml  pyproject.toml  single-input.json
config/: celery.py  settings.py  urls.py
reports/: models.py  permissions.py  serializers.py  tasks.py  urls.py  utils.py  validation.py  views.py
reports/migrations/: 0001_initial.py  0002_alter_report_pdf_content.py  0002_report_error_report_status.py
templates/: report.html
